Supportページ追加

--- a/chooseBooksSupport.html
+++ b/chooseBooksSupport.html
@@ -2,7 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>プライバシーポリシー | chooseBooks</title>
+    <title>サポート | chooseBooks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       html {
@@ -32,11 +32,11 @@
     />
     <h1>
       chooseBooks
-      <br />プライバシーポリシー
+      <br />サポート
     </h1>
     <p>
-      本アプリケーションはユーザーの個人情報やその他使用に伴い発生する情報を一切収集しません。<br />
-      お問い合わせは ymo0621Product[at]gmail.com までお願いします。<br />
+      本アプリケーションに関するお問い合わせは ymo0621Product[at]gmail.com
+      までお願いします。<br />
       ※[at]は@に置き換えてください。
     </p>
   </body>
