サポートページ文言変更

--- a/chooseBooksSupport.html
+++ b/chooseBooksSupport.html
@@ -36,7 +36,7 @@
     </h1>
     <p>
       本アプリケーションに関するお問い合わせは ymo0621Product[at]gmail.com
-      までお願いします。<br />
+      までお願いいたします。<br />
       ※[at]は@に置き換えてください。
     </p>
   </body>
